@startuml
hide methods
skinparam classAttributeIconSize 0

entity "users" as users {
  *id : BIGINT <<PK>>
  --
  username : VARCHAR(100) <<UQ>>
  password : VARCHAR(255)
  first_name : VARCHAR(100)
  last_name : VARCHAR(100)
  phone_number : VARCHAR(17)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "roles" as roles {
  *id : INT <<PK>>
  --
  name : VARCHAR(50) <<UQ>>
  description : VARCHAR(255)
  created_at : TIMESTAMP
}

entity "user_roles" as user_roles {
  *user_id : BIGINT <<PK, FK>>
  *role_id : INT <<PK, FK>>
}

entity "addresses" as addresses {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  street_address : VARCHAR(255)
  city : VARCHAR(100)
  state : VARCHAR(100)
  postal_code : VARCHAR(20)
  country : VARCHAR(100)
  phone_number : VARCHAR(15)
  address_type : VARCHAR(50)
  is_default : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "categories" as categories {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR(100) <<UQ>>
}

entity "products" as products {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR(200)
  description : VARCHAR(500)
  price : DECIMAL(10,2)
  stock : INT
  brand : VARCHAR(100)
  category_id : BIGINT <<FK>>
}

entity "product_images" as product_images {
  *id : BIGINT <<PK>>
  --
  image_url : VARCHAR(500)
  product_id : BIGINT <<FK>>
}

entity "carts" as carts {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  is_active : BOOLEAN
}

entity "cart_items" as cart_items {
  *id : BIGINT <<PK>>
  --
  product_id : BIGINT <<FK>>
  quantity : INT
  cart_id : BIGINT <<FK>>
}

entity "orders" as orders {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  total_amount : DECIMAL(10,2)
  status : VARCHAR(50)
  created_at : TIMESTAMP
}

entity "order_items" as order_items {
  *id : BIGINT <<PK>>
  --
  product_id : BIGINT <<FK>>
  quantity : INT
  order_id : BIGINT <<FK>>
}

entity "currencies" as currencies {
  *id : INT <<PK>>
  --
  code : VARCHAR(3) <<UQ>>
  name : VARCHAR(50)
  symbol : VARCHAR(5)
  is_active : BOOLEAN
  created_at : TIMESTAMP
}

entity "payments" as payments {
  *id : BIGINT <<PK>>
  --
  order_id : BIGINT <<FK>>
  amount : DECIMAL(10,2)
  currency : VARCHAR(10) <<FK>>
  stripe_payment_id : VARCHAR(100) <<UQ>>
  idempotency_key : VARCHAR(100) <<UQ>>
  status : VARCHAR(50)
  created_at : TIMESTAMP
}

users ||--o{ addresses
users ||--o{ user_roles
roles ||--o{ user_roles

users ||--o{ carts
carts ||--o{ cart_items
products ||--o{ cart_items

categories ||--o{ products
products ||--o{ product_images

users ||--o{ orders
orders ||--o{ order_items
products ||--o{ order_items

orders ||--o{ payments
currencies ||--o{ payments


@enduml
